--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,9 @@ version: "3.9"
 services:
   web:
     build: .
+    env_file:
+      - .env
     environment:
       - RUN_IN_DOCKER=true
-      - TARGET_EMAIL=
-      - GMAIL_USER=
-      - GMAIL_PASSWORD=
     ports:
       - "8080:8080"
